# alloy

./: .gitignore  CMakeLists.txt
assets/shaders/: cube.frag  cube.vert  model.frag  model.vert
engine/assets/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
engine/core/: Camera.cpp  Camera.hpp  Engine.cpp  Engine.hpp  Window.cpp  Window.hpp  main.cpp
engine/graphics/: RenderObject.cpp  RenderObject.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
engine/math/: Cube.hpp  Transform.hpp  Vertex.hpp
engine/utils/: LoadFiles.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
